--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -1,10 +1,9 @@
-upstream web_app {
-    server web_service:8000;  # Use the service name instead of localhost
-}
-
 server {
     listen 80;
     server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz;
+
+    # Set max body size
+    client_max_body_size 100M;
 
     location / {
         proxy_pass http://web_app;
@@ -15,38 +14,20 @@ server {
 
     location /static/ {
         alias /app/staticfiles/;
-        # Ensure static file requests are served directly
-        # without hitting the upstream server
         expires max;
-        # Add more caching directives as needed
     }
 
     location /media/ {
         alias /app/media/;
-        # Serve media files directly
-        # without hitting the upstream server
     }
 
-    # Additional configurations can be added here
-
-    # Error handling configuration
     error_page 500 502 503 504 /custom_50x.html;
     location = /custom_50x.html {
         root /usr/share/nginx/html;
         internal;
     }
 
-    # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
-
-    # SSL configurations (if SSL is enabled)
-    # ssl_certificate /etc/nginx/ssl/nginx.crt;
-    # ssl_certificate_key /etc/nginx/ssl/nginx.key;
-    # include /etc/nginx/ssl.conf;
-
-    # Enable Gzip compression
-    # gzip on;
-    # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
