--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream web_app {
+    server web_service:8000;
+}
+
 server {
     listen 80;
     server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz;
@@ -31,3 +35,4 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
 }
+
