--- a/env/.env
+++ b/env/.env
@@ -1,8 +1,8 @@
-BOT_TOKEN=1165698137:AAGXwOKDxA9rVbUIGCWDmx9sQpxFH9MAtg4
+BOT_TOKEN=1165698137:AAE3vW-BQD1lHxDKTZlHlIU6OXo-BaZ6c9A
 SQL_DATABASE=support
 SQL_USER=postgres
 SQL_PASSWORD=1253
 SQL_HOST=db
 SQL_PORT=5432
 SECRET_KEY=django-insecure-st-+zk0amdt4plk9wd&#_ji$nvirwxd)59@yf#uvm5on_u9^t@
-DEBUG=True
+DEBUG=False
