--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-      - media_volume:/app/media
+#      - media_volume:/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -54,13 +54,13 @@ services:
       - web_service
     volumes:
       - static_volume:/app/staticfiles
-      - media_volume:/app/media
+#      - media_volume:/app/media
     logging:
       options:
         max-size: '10m'
         max-file: '3'
 
 volumes:
-  media_volume:
+#  media_volume:
   static_volume:
   postgres_data:
