--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@ BOT_TOKEN=1165698137:AAE3vW-BQD1lHxDKTZlHlIU6OXo-BaZ6c9A
 SQL_DATABASE=support
 SQL_USER=postgres
 SQL_PASSWORD=1253
-SQL_HOST=db
+SQL_HOST=localhost
 SQL_PORT=5432
 SECRET_KEY=django-insecure-st-+zk0amdt4plk9wd&#_ji$nvirwxd)59@yf#uvm5on_u9^t@
 DEBUG=False
