--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -4,10 +4,23 @@ upstream web_app {
 
 server {
     listen 80;
+    server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz admin.shinzofamily.uz;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    listen 443 ssl;
     server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz;
 
-    # Set max body size
-    client_max_body_size 100M;
+    ssl_certificate /etc/letsencrypt/live/admin.shinzofamily.uz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.shinzofamily.uz/privkey.pem;
 
     location / {
         proxy_pass http://web_app;
