--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-#      - media_volume:/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -54,13 +53,22 @@ services:
       - web_service
     volumes:
       - static_volume:/app/staticfiles
-#      - media_volume:/app/media
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     logging:
       options:
         max-size: '10m'
         max-file: '3'
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -g \"daemon off;\"; done'"
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done'"
 
 volumes:
-#  media_volume:
+  #  media_volume:
   static_volume:
   postgres_data:
