--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -4,23 +4,10 @@ upstream web_app {
 
 server {
     listen 80;
-    server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz admin.shinzofamily.uz;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-}
-
-server {
-    listen 443 ssl;
     server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz;
 
-    ssl_certificate /etc/letsencrypt/live/admin.shinzofamily.uz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.shinzofamily.uz/privkey.pem;
+    # Set max body size
+    client_max_body_size 100M;
 
     location / {
         proxy_pass http://web_app;
