--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-#      - media_volume:/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -30,7 +29,7 @@ services:
     ports:
       - "5432:5432"
 
-  support_bot:
+  bot:
     build:
       context: .
       dockerfile: ./compose/django/Dockerfile
@@ -54,13 +53,11 @@ services:
       - web_service
     volumes:
       - static_volume:/app/staticfiles
-#      - media_volume:/app/media
     logging:
       options:
         max-size: '10m'
         max-file: '3'
 
 volumes:
-#  media_volume:
   static_volume:
   postgres_data:
