--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -4,7 +4,23 @@ upstream web_app {
 
 server {
     listen 80;
-    server_name 20.254.232.142 51.20.66.38 shinzofamily.uz www.shinzofamily.uz;
+    server_name admin.shinzofamily.uz;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name admin.shinzofamily.uz;
+
+    ssl_certificate /etc/letsencrypt/live/admin.shinzofamily.uz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.shinzofamily.uz/privkey.pem;
 
     # Set max body size
     client_max_body_size 100M;
@@ -35,4 +51,3 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
 }
-
