--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -11,6 +11,21 @@ server {
     }
 
     location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name admin.shinzofamily.uz;
+
+    ssl_certificate /etc/letsencrypt/live/admin.shinzofamily.uz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.shinzofamily.uz/privkey.pem;
+
+    # Set max body size
+    client_max_body_size 100M;
+
+    location / {
         proxy_pass http://web_app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
