--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -1,53 +1,75 @@
-upstream web_app {
-    server web_service:8000;
-}
+version: '3.8'
 
-server {
-    listen 80;
-    server_name admin.shinzofamily.uz;
+services:
+  web_service:
+    build:
+      context: .
+      dockerfile: ./compose/django/Dockerfile
+    image: support_web
+    command: /start
+    volumes:
+      - .:/app
+      - static_volume:/app/staticfiles
+    ports:
+      - "8000:8000"
+    env_file:
+      - env/.env
+    depends_on:
+      - db
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+  db:
+    image: postgres:15-alpine
+    container_name: support_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=support
+      - POSTGRES_PASSWORD=1253
+    ports:
+      - "5432:5432"
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
+  bot:
+    build:
+      context: .
+      dockerfile: ./compose/django/Dockerfile
+    image: support_bot
+    command: python /app/SupportBot/main.py
+    volumes:
+      - .:/app
+    env_file:
+      - env/.env
+    depends_on:
+      - db
 
-server {
-    listen 443 ssl;
-    server_name admin.shinzofamily.uz;
+  nginx:
+    build:
+      context: .
+      dockerfile: ./compose/nginx/Dockerfile
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web_service
+    volumes:
+      - static_volume:/app/staticfiles
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - /var/www/certbot:/var/www/certbot
+    logging:
+      options:
+        max-size: '10m'
+        max-file: '3'
 
-    ssl_certificate /etc/letsencrypt/live/admin.shinzofamily.uz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.shinzofamily.uz/privkey.pem;
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - /var/www/certbot:/var/www/certbot
 
-    # Set max body size
-    client_max_body_size 100M;
-
-    location / {
-        proxy_pass http://web_app;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-    }
-
-    location /static/ {
-        alias /app/staticfiles/;
-        expires max;
-    }
-
-    location /media/ {
-        alias /app/media/;
-    }
-
-    error_page 500 502 503 504 /custom_50x.html;
-    location = /custom_50x.html {
-        root /usr/share/nginx/html;
-        internal;
-    }
-
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
-}
+volumes:
+  static_volume:
+  postgres_data:
+  certbot-etc:
+  certbot-var:
