--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     command: /start
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
+      # - static_volume:/app/staticfiles
     ports:
       - "8000:8000"
     env_file:
@@ -44,5 +44,4 @@ services:
 
 
 volumes:
-  static_volume:
   postgres_data:
