--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,10 @@
-SQL_DATABASE=SQL_DATABASE
-SQL_USER=SQL_USER
-SQL_PASSWORD=SQL_PASSWORD
-SQL_HOST=SQL_HOST
-SQL_PORT=SQL_PORT
-SECRET_KEY=SECRET_KEY
-DEBUG=DEBUG
+SQL_DATABASE=support
+SQL_USER=postgres
+SQL_PASSWORD=1253
+SQL_HOST=db
+SQL_PORT=5432
+SECRET_KEY=e(%k=c1@82b*hf9!thy76@etoi1@3$in4cp(6clwq)kd)stzi6
+DEBUG=False
+BOT_TOKEN=1165698137:AAEFfWzjgf8nWz_kcQw9tym98Zev5BsSzXM
+ALLOWED_HOSTS=127.0.0.1,admin.shinzofamily.uz,web,localhost,shinzofamily.uz
+CSRF_TRUSTED_ORIGINS=https://admin.shinzofamily.uz,http://127.0.0.1,http://localhost
